INSTADRAM: Add gitignore for mountebank

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,24 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
+mb*.log
+*.pid
+*.swp
+*.swo
+/dist/
+!scripts/dist/
+mountebank.iml
+TODO
+request.txt
+/docs
+/coverage
+troubleshooting/
+protocols.json
+metrics/
+.idea-bk
+.nyc_output/
+cc-test-reporter
+testResults
+tmp/
